--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pomodoro-clock",
+  "name": "pomodoro",
   "description": "Pomodoro timer",
   "version": "0.1.0",
   "private": true,
@@ -8,15 +8,12 @@
     "url": "git://github.com/DeVlad/pomodoro-clock.git"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
     "grunt": "^0.4.5",
     "grunt-auto-install": "^0.3.1",
-    "grunt-babel": "^6.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-htmlmin": "^2.2.0",
     "grunt-contrib-uglify": ">=0.5.0",
     "grunt-gh-pages": "^2.0.0",
-    "grunt-newer": "^1.2.0",
     "grunt-postcss": "^0.8.0",
     "grunt-processhtml": "^0.4.1",
     "grunt-w3c-html-validation": ">=0.1.8",
